--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -40,7 +40,7 @@ h3 {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: unset;
 }
 
 .movie_star i {
@@ -48,7 +48,7 @@ h3 {
     color: #FFC045;
 }
 
-.movie_box_info {
+.movie_box_info, .movie_box_infos {
     font-size: 12px;
     color: #fff;
     opacity: 0.5;
@@ -74,6 +74,16 @@ h3 {
     left: 0;
 }
 
+.movie_title {
+    height: 46px;
+    overflow: hidden;
+}
+.movie_year {
+    color: #fff;
+    opacity: 0.5;
+    margin-top: 10px;
+    font-size: 12px;
+}
 .footer_element {
     font-size: 24px;
     color: #fff;
@@ -138,7 +148,7 @@ h3 {
 .bottom_banner {
     position: absolute;
     left: 115px;
-    top: 145px;
+    top: 439px;
     width: 164px;
     height: 250px;
 }
