--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -20,7 +20,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .container {
@@ -32,15 +32,16 @@ h3 {
     grid-template-columns: auto auto;
     grid-gap: 20px;
     width: 100%;
-    margin-top: 5px;
+    margin-top: 80px;
     margin-bottom: 65px;
 }
 
 .movie_item_container {
     width: 100%;
-    display: flex;
+    display: grid;
     flex-direction: column;
     justify-content: unset;
+    grid-template-columns: 50%;
 }
 
 .movie_star i {
@@ -104,7 +105,14 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #0f1b2b;
+    padding: 0 20px;
+    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.75);
+    z-index: 1;
 }
 
 #search {
@@ -118,6 +126,7 @@ h3 {
     border-radius: 10px;
     color: #E51937;
     font-size: 20px;
+    padding-left: 20px;
 }
 #search:focus {
     outline: none;
@@ -135,7 +144,14 @@ h3 {
     color: #fff;
     font-size: 30px;
     position: absolute;
-    right: 0;
+    right: 20px;
+}
+.dont_title {
+    height: 75vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 350px;
 }
 
 /* DETAIL  */
@@ -154,6 +170,17 @@ h3 {
 }
 .w-100 {
     width: 100%;
+}
+.favorites {
+    position: absolute;
+    font-size: 23px;
+    padding: 5px;
+    right: 30px;
+    top: 27px;
+    color: #FFC045;
+    border: 1px solid #0f1b2b;
+    background-color: #0f1b2b;
+    border-radius: 30px;
 }
 .detail_movie_info {
     text-align: center;
@@ -224,11 +251,14 @@ h3 {
     border-radius: 10px;
 }
 .detail_back_button {
-    color: #fff;
+    color: #FFC045;
     position: absolute;
     left: 20px;
     top: 20px;
-    font-size: 35px;
+    font-size: 45px;
+    text-shadow: 2px 2px 20px #222;
+    background-color: #0f1b2b;
+    border-radius: 30px;
 }
 .main_moive_photo {
     width: 164px;
